Tune benchmark runtime options